WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282430
Fix Neg lowering in LowerInt64
https://bugs.webkit.org/show_bug.cgi?id=282430
Summary
Fix Neg lowering in LowerInt64
Angelos Oikonomopoulos
Reported
2024-11-01 03:47:19 PDT
Value needs to be replaced.
Attachments
Add attachment
proposed patch, testcase, etc.
Angelos Oikonomopoulos
Comment 1
2024-11-01 03:52:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/36040
EWS
Comment 2
2024-11-01 14:26:43 PDT
Committed
286026@main
(a43614f495a6): <
https://commits.webkit.org/286026@main
> Reviewed commits have been landed. Closing PR #36040 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-01 14:27:14 PDT
<
rdar://problem/139095340
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug