Fix Neg lowering in LowerInt64 https://bugs.webkit.org/show_bug.cgi?id=282430

Reviewed by Justin Michaud.

Don't accidentally generate a stray Identity that we're not equiped to
handle when lowering to Air, replace the value instead.

Enable now-passing tests.

* Source/JavaScriptCore/b3/B3LowerInt64.cpp:
* Source/JavaScriptCore/b3/testb3_failingArmV7Tests.inc:

Canonical link: https://commits.webkit.org/286026@main